results/SpecGenBench/0-shot/log-PowerOfTwoLoop-2023_11_29_00_10_07.txt
class PowerOfTwoLoop {
    //@ requires n >= 0;
    //@ ensures \result == (n > 0 && (\forall int i; i >= 0 && i < 31; n % 2 == 0 ==> n == 2^i));
    public boolean isPowerOfTwo(int n) {
        if(n <= 0) {
            return false;
        }
        while (n % 2 == 0) {
            n /= 2;
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/PowerOfTwoLoop.java:3: error: bad operand types for binary operator '^'
    //@ ensures \result == (n > 0 && (\forall int i; i >= 0 && i < 31; n % 2 == 0 ==> n == 2^i));
                                                                                            ^
  first type:  boolean
  second type: int
1 error

